# Stamps

./: .claudeignore  .env.app  .env.keys.example  .gitignore  CLAUDE.md  GITHUB_ISSUE_MakeCode_Enhancement.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  PRD.md  README.md  check_db.py  console.py  delete_stamp.py  issue_body.md  main.py  models.py  pipeline.py  polygon_detector.py  pyproject.toml  session_manager.py  stamp_classifier.py  test_imports.py  test_logging.py  verify_changes.py  visualizer.py
.claude/: .env  mcp.json  settings.local.json
.claude/commands/: init-project.md  update-docstring.md
config/: llava_prompt.txt
docs/: training-guide.md
guides/: Initialise UV.md  claude-agents-subagents-startup-guide.md  claude-code-startup-guide.md  claude-commands-startup-guide.md  claude-feature-driven-development-guide.md  claude-mcp-servers-startup-guide.md  claude-skills-startup-guide.md  claude_md_template.md  initialise github.md  technical_stack.md
guides/project_setup/: logging-setup-instructions.md
resources/: print.css
src/: __init__.py  catalog.py  cli.py  downloader.py  enhancer.py  extractor.py  generator.py  image_trimmer.py  makecode_capture.py  makecode_detector.py  printer.py  qrcode_processor.py  scraper.py  translator.py
src/core/: __init__.py  config.py  database.py  errors.py  (+1 more)
tests/: __init__.py  conftest.py  phase2_test_plan.md  test_cli.py  test_config.py  test_downloader.py  test_elecfreaks.py  test_errors.py  test_extractor.py  test_generator.py  test_image_trimmer.py  test_plan_identification_pipeline.md  test_translator.py
(+49 files in other folders)
