[project]
name = "stamp-tools"
version = "0.1.0"
description = "AI-powered stamp collection management: RAG database, camera identification, and collection migration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # CLI & Console
    "click>=8.1",
    "rich>=13.7",
    
    # Configuration
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    
    # Web Scraping
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    
    # Database
    "supabase>=2.0",
    
    # AI/ML
    "openai>=1.0",
    "groq>=0.5",
    "ultralytics>=8.0",
    
    # Image Processing
    "pillow>=10.0",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]

[project.scripts]
stamp-tools = "src.cli:cli"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
